package Observer;

public interface AgencySubscriber {
    void update(String notification);
}
